Overflow hidden on the #content to prevent mobile scroll for extra long words in headers

--- a/app/assets/stylesheets/scaffolding.css.scss
+++ b/app/assets/stylesheets/scaffolding.css.scss
@@ -35,6 +35,7 @@
           padding: 40px 30px 0 0;
           position: relative;
           width: 100%;
+          overflow: hidden;
         }
 
                 @media screen and (max-width: 1028px) { #content { padding-right: 0; padding-top: 40px; } }
